--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+/*=-=-=-=- HEADER =-=-=-=-*/
 header {
     background-color: black;
     color: white;
@@ -44,7 +45,7 @@ subheader .col a:hover {
     text-decoration: underline;
 }
 
-/*=-=-=-= MAIN =-=-=-= */
+/*=-=-=-= MAIN - INDEX =-=-=-= */
 #f-main .row .img-fluid {
     transition: transform 0.3s ease;
     /* Aplica a transição suave na imagem */
@@ -56,7 +57,7 @@ subheader .col a:hover {
     cursor: pointer;
 }
 
-/*=-=-=-= ABOUT-US =-=-=-=*/
+/*=-=-=-= ABOUT-US - INDEX =-=-=-=*/
 #about-us {
     height: 600px;
     background-size: cover;
@@ -84,15 +85,6 @@ subheader .col a:hover {
     width: 250px;
 }
 
-/*=-=-=-= FOOTER =-=-=-=*/
-footer {
-    padding: 10px;
-}
-
-footer img {
-    width: 200px;
-}
-
 /* =-=-=-= PRODUCTS PAGE =-=-=-= */
 .store-card {
     width: 300px;
@@ -109,7 +101,7 @@ footer img {
     resize: none;
 }
 
-.no-border-table td{
+.no-border-table td {
     background-color: #E9ECEF !important;
 }
 
@@ -121,4 +113,11 @@ footer img {
     height: 450px;
 }
 
-/* =-=-=-= SERVICES PAGE =-=-=-=*/
+/*=-=-=-= FOOTER =-=-=-=*/
+footer {
+    padding: 10px;
+}
+
+footer img {
+    width: 200px;
+}
